Update Classification quality metrics.ipynb

--- a/Practice/models/quality metrics/Classification quality metrics.ipynb
+++ b/Practice/models/quality metrics/Classification quality metrics.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Метрики качества бинарной классификации\n",
     "\n",
-    "Павел Филонов (filonovpv@gmail.com)"
+    "Усовик С.В. (usovik@mirea.ru)"
    ]
   },
   {
